opam-version: "1.2"
version: "2.1"
maintainer: "miyazaki@fos.kuis.kyoto-u.ac.jp"
authors: ["Yusuke Miyazaki <miyazaki@fos.kuis.kyoto-u.ac.jp>"]
homepage: "https://github.com/ymyzk/lambda-dti"
bug-reports: "https://github.com/ymyzk/lambda-dti/issues"
dev-repo: "https://github.com/ymyzk/lambda-dti.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >="1.2.0" & < "2"}
  "menhir"
  # 2.2.2 is the final version to support OCaml 4.03
  "ounit" {test & >="2.2.2" & < "3"}
]
available: [ocaml-version >= "4.03.0"]
