opam-version: "2.0"
version: "2.1"
synopsis: "Interpreter of the ITGL with dynamic type inference"
maintainer: "miyazaki@fos.kuis.kyoto-u.ac.jp"
authors: ["Yusuke Miyazaki <miyazaki@fos.kuis.kyoto-u.ac.jp>"]
homepage: "https://github.com/ymyzk/lambda-dti"
bug-reports: "https://github.com/ymyzk/lambda-dti/issues"
dev-repo: "git+https://github.com/ymyzk/lambda-dti.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03"}
  "dune" {>= "2.0" & < "3"}
  "menhir"
  "ounit2" {with-test & >= "2" & < "3"}
]
