opam-version: "1.2"
version: "1.0"
maintainer: "miyazaki@fos.kuis.kyoto-u.ac.jp"
authors: ["Yusuke Miyazaki <miyazaki@fos.kuis.kyoto-u.ac.jp>"]
homepage: "https://github.com/ymyzk/lambda-rti"
bug-reports: "https://github.com/ymyzk/lambda-rti/issues"
dev-repo: "https://github.com/ymyzk/lambda-rti.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build & >="1.0+beta14"}
  "menhir"
]
