opam-version: "1.2"
version: "1.1"
maintainer: "miyazaki@fos.kuis.kyoto-u.ac.jp"
authors: ["Yusuke Miyazaki <miyazaki@fos.kuis.kyoto-u.ac.jp>"]
homepage: "https://github.com/ymyzk/lambda-rti"
bug-reports: "https://github.com/ymyzk/lambda-rti/issues"
dev-repo: "https://github.com/ymyzk/lambda-rti.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >="1.3.0" & < "2"}
  "menhir"
  "ounit" {test}
]
available: [ocaml-version >= "4.03.0"]
