opam-version: "1.2"
version: "1.0"
maintainer: "miyazaki@fos.kuis.kyoto-u.ac.jp"
authors: ["Yusuke Miyazaki <miyazaki@fos.kuis.kyoto-u.ac.jp"]
homepage: "https://github.com/ymyzk/sgtp"
bug-reports: "https://github.com/ymyzk/sgtp/issues"
dev-repo: "https://github.com/ymyzk/sgtp.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build & >="1.0+beta13"}
  "menhir"
]
